# prodigon

./: .env.example  CHANGELOG.md  Makefile  README.md  pyproject.toml
architecture/versions/v0/: README.md  api-reference.md  backend-architecture.md  data-flow.md  design-decisions.md  frontend-architecture.md  getting-started.md  infrastructure.md  system-overview.md
baseline/: alembic.ini  docker-compose.yml
baseline/alembic/: env.py
baseline/alembic/versions/: 20260423_0900_initial_baseline_schema.py
baseline/api_gateway/: Dockerfile  requirements.txt
baseline/api_gateway/app/: main.py
baseline/shared/: db.py  models.py  schemas.py
baseline/worker_service/: Dockerfile
baseline/worker_service/app/: config.py  dependencies.py  main.py
frontend/src/: App.tsx
frontend/src/api/: chat.ts  client.ts  endpoints.ts
frontend/src/lib/: constants.ts  topics-data.ts
frontend/src/pages/: chat-page.tsx  content-page.tsx  topics-page.tsx
frontend/src/stores/: chat-store.ts
scripts/: db_bootstrap.sql  run_all.sh  setup.sh
workshop/: README.md
workshop/part0_introduction/task01_getting_started/: README.md  production_reality.md  slides.md
workshop/part0_introduction/task02_system_architecture/: README.md  production_reality.md  slides.md
workshop/part0_introduction/task03_lifecycle_and_di/: README.md  production_reality.md  slides.md
workshop/part0_introduction/task04_request_flows/: README.md  production_reality.md  slides.md
workshop/part0_introduction/task05_persistence_observability/: README.md  production_reality.md  slides.md
(+67 files in other folders)
