[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prod-ai-system"
version = "0.1.0"
description = "Production AI System Design - Workshop Codebase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "structlog>=24.0",
    "groq>=0.11.0",
    # --- Persistence (Postgres) ---
    # SQLAlchemy 2.x ships a native async API; asyncpg is the fastest Postgres
    # driver for asyncio. Alembic handles schema migrations.
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx",  # for TestClient
    "ruff>=0.4.0",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]
worker = [
    "redis>=5.0",
]
security = [
    "pyjwt>=2.8.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["baseline"]

[tool.pytest.ini_options]
testpaths = ["baseline/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
